--- a/views/landing.html
+++ b/views/landing.html
@@ -5,40 +5,73 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="favicon.ico">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/materialize.css">
   <title>Laterbase</title>
-
-  <style>
-    html, body, .content {
-      height: 100%;
-    }
-    h5 {
-      width: 400px;
-    }
-  </style>
 </head>
 
 <body class="text-center">
-  <div class="content d-flex justify-content-center align-items-center">
-    <form class="form-signin">
-      <img class="mb-4" src="favicon.png" alt="" width="72"
-        height="72">
-      <h5 class="h5 mb-3 font-weight-normal">You remember the theme tune from Jaws? Well, I don't want anything like that, obviously. I want something completely different. I want something that, when people hear it, they'll immediately go ‘Yeah’.</h5>
-      <label for="base-id" class="sr-only">Base Code</label>
-      <input type="text" id="base-id" class="form-control" placeholder="Base code" required autofocus>
-      <div class="d-flex justify-content-between">
-        <button class="btn btn-primary btn-block" style="margin-top: 8px" type="submit">Join</button>
-        <button class="btn btn-secondary btn-block" type="submit">Create</button>
+
+
+  <!-- Header -->
+  <div class="navbar-fixed">
+    <nav>
+      <div class="nav-wrapper">
+        <a href="" class="brand-logo center">Laterbase</a>
       </div>
-    </form>
+    </nav>
+  </div>
+
+
+  <!-- Content -->
+  <div class="sign-in container">
+
+    <!-- Image -->
+    <div class="row">
+      <div class="col s12">
+        <img class="circle responsive-img" src="favicon.png" alt="" width="100" height="100">
+      </div>
+    </div>
+
+    <!-- Quote -->
+    <div class="row">
+      <div class="col s12">
+        <p>You remember the theme tune from Jaws? 
+          Well, I don't want anything like that, obviously. 
+          I want something completely different. 
+          I want something that, when people hear it, they'll immediately go Yeah!.
+        </p>
+      </div>
+    </div>
+
+    <!-- Sign-in form -->
+    <div class="row">
+      <div class="col s12">
+        <form class="form" action="/base" method="POST">
+          <!-- Base code -->
+          <div class="row">
+            <div class="input-field col s3"></div>
+            <div class="input-field col s6">
+              <input id="base_code" type="text">
+              <label for="base_code">Base Code</label>
+            </div>
+            <div class="input-field col s3"></div>
+          </div>
+          <!-- Join button -->
+          <div class="row">
+            <div class="col s12">
+              <button class="button waves-effect waves-light btn-large" name="action" value="join">Join</button>
+            </div>
+          </div>
+          <!-- Create button -->
+          <div class="row">
+            <div class="col s12">
+              <button class="button waves-effect waves-light btn" name="action" value="create">Create</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
   </div>
 </body>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-  crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-  crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-  crossorigin="anonymous"></script>
-
+<script src="./js/materialize.min.js"></script>
 </html>
